initial html edit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Minimal</h1>
+        <h1>Social Networking</h1>
         <p>A Theme for GitHub Pages</p>
         <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
         <ul>
@@ -25,16 +25,13 @@
         </ul>
       </header>
       <section>
-        <h1>GitHub Flavored Markdown</h1>
+        <h1>Grant Barry</h1>
 
-        <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
+        <p>Junior studing Computer Science at the University of Michigan's College of Engineering. My interests include backend web development and distributed systems.</p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <h2>Contact Information</h2>
 
-        <p>Roses are red<br>
-        Violets are blue</p>
-
-        <p>The next paragraph has the same phrases, but now they are separated by two spaces and a newline character:</p>
+        <p>(616) 335-2931 - grantbarry3@gmail.com - gbarry@umich.edu</p>
 
         <p>Roses are red<br><br>
         Violets are blue</p>
